# QuantumLib

./: .gitignore  Bits.v  CHANGES.md  CITATION.cff  CSubring.v  CauchySchwarz.v  CircuitSynthesis.v  Complex.v  Continuous.v  CoqMakefile  Ctopology.v  Dirac.v  DiscreteProb.v  Eigenvectors.v  FTA.v  FiniteGroups.v  GenMatrix.v  GenRowColOps.v  GenSubspaces.v  GenVecSet.v  Heisenberg.v  Kronecker.v  LICENSE  Makefile  Matrix.v  Matrix.v.orig  Measurement.v  Modulus.v  Monad.v  Monoid.v  NewMatrixDef.v  Pad.v  PermutationAutomation.v  PermutationInstances.v  PermutationMatrices.v  Permutations.v  PermutationsBase.v  Polar.v  Polynomial.v  Prelim.v  (+21 more)
.github/workflows/: coq-action.yml
docs/: QuantumLib.Complex.html  QuantumLib.Ctopology.html  QuantumLib.DiscreteProb.html  QuantumLib.Eigenvectors.html  QuantumLib.FTA.html  QuantumLib.FiniteGroups.html  QuantumLib.Matrix.html  QuantumLib.Measurement.html  QuantumLib.Pad.html  QuantumLib.Permutations.html  QuantumLib.Polar.html  QuantumLib.Polynomial.html  QuantumLib.Prelim.html  QuantumLib.Proportional.html  QuantumLib.Quantum.html  QuantumLib.RealAux.html  QuantumLib.Summation.html  QuantumLib.VecSet.html  QuantumLib.VectorStates.html  index.html  toc.html
html/: QuantumLib.DiscreteProb.html  QuantumLib.FTA.html  QuantumLib.Matrix.html  QuantumLib.Permutations.html  QuantumLib.Quantum.html  QuantumLib.RealAux.html  QuantumLib.VecSet.html
toc.html/: index.html
toc.html/coq-quantumlib/: index.html
